# gbmhealpy

./: gbmfile.py  localization.py  setup.cfg  setup.py
gbmhealpy/: coords.py  data.py  headers.py  lal_post_subs.py  localization.py
gbmhealpy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
notebooks/: SmallExample.ipynb
