[metadata]
name = gbmhealpy
author= EdnaRuiz
# url = 
description = Python3 scripts for gbm visualization (minimal of the gbm tools in fermi data centre)
license = GNU General Public License v3.0 /Although I am not sure 
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.8
install_requires =
  astropy
  pandas
  scipy
  matplotlib

[options.extras_require]
tests =
  pytest
  pytest-cov

# provide an "all" extra for convenience for users that
# includes all optional dependencies, e.g. to run the tests
all =
  %(tests)s

docs =
  sphinx ~= 5.0
  pydata-sphinx-theme
  sphinx_automodapi
  numpydoc

# and one for developers that includes even more
dev =
  %(all)s
  %(docs)s
  setuptools_scm

  